Gap issue has been resolved
Fixed the issue with the white space in-between the circles and the second section.
I fixed this by adding the class "indexCircles" to the circles so I can change the height specifically for the index page without affecting other pages.
I also increased the speed slightly for the animation so the circles reach the top of the page on Index. This does affect other pages but is a very slight change which does not result in repeated code.

--- a/content/css/style.css
+++ b/content/css/style.css
@@ -99,6 +99,10 @@ footer {
   padding: 0;
 }
 
+.indexCircles {
+  height: 120%;
+}
+
 .circles li {
   position: absolute;
   display: block;
@@ -265,7 +269,7 @@ footer {
     border-radius: 0;
   }
   100% {
-    transform: translateY(-1000px) rotate(720deg);
+    transform: translateY(-1100px) rotate(720deg);
     opacity: 0;
     border-radius: 50%;
   }
@@ -277,7 +281,7 @@ footer {
     border-radius: 0;
   }
   100% {
-    transform: translateY(-1000px) rotate(720deg);
+    transform: translateY(-1100px) rotate(720deg);
     opacity: 0;
     border-radius: 50%;
   }
